tests/input/errors/generated_pkgfmt/unwrap.go
package errors

func (e *joinError) Unwrap() []error {
	return e.errs
}
